# RIDRec

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/ablations/: wo_diffusion.yaml  wo_np.yaml  wo_retrieval.yaml
ridrec/: __init__.py  config.py  trainer.py
ridrec/data/: __init__.py  dataset.py  preprocess.py
ridrec/models/: __init__.py  diffusion.py  encoder.py  neural_process.py  retrieval.py  ridrec.py
ridrec/utils/: __init__.py  io.py  metrics.py  random.py
scripts/: evaluate.py  prepare_sessions.py  train.py
tests/: test_forward.py
